# Python-for-datascience

day00/ex03/: NULL_not_found.py
day00/ex05/: tester.py
day00/ex06/: filterstring.py  ft_filter.py
day00/ex07/: sos.py  test.py
day00/ex08/: Loading.py
day00/ex09/: LICENSE  README.md  setup.cfg
day00/ex09/ft_package/: __init__.py
day01/ex00/: give_bmi.py
day01/ex01/: array2D.py  test.py
day01/ex02/: load_image.py
day01/ex03/: load_image.py  zoom.py
day01/ex04/: load_image.py  rotate.py
day01/ex05/: load_image.py  pimp_image.py  test.py
ex00/: Hello.py
ex01/: format_ft_time.py
ex02/: find_ft_type.py  tester.py
ex04/: whatis.py
ex05/: building.py
