[metadata]
name = ft_package
version = 0.0.1
author = eagle
author_email = eagle@42.fr
description = A sample test package
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/eagle/ft_package

[options]
packages = find:
python_requires = >=3.6
